--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>zookeeper</module>
+        <module>dubbo</module>
     </modules>
 
 
